--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
       <div class="card">
         <h1>Hi, I'm Jerome &#129305</h1>
-        <img src="/images/idphotojpeg.jpeg" alt="Jerome's id photo">
+        <img src="images/idphotojpeg.jpeg" alt="Jerome's id photo">
         <p>Le Wagon HTML/CSS training in progress...for new adventures !</p>
         <div class="">
           <a class ="btn-primary" href="https://www.lewagon.com" target="_blank">Discover Le Wagon</a>
